[package]
name = "dungeon"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
serde = { version = "1.0.200", features = ["serde_derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "time"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
